<resources>
    <string name="app_name">SnapList</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_delete_checked">Delete checked items</string>
    <string name="menu_delete_all">Delete all items</string>
    <string name="menu_add_list">Add a new list</string>
    <string name="menu_delete_list">Delete list</string>
    <string name="hint_list_name">List Name</string>
    <string name="hint_item_name">New item</string>
    <string name="content_description_add_new_item_button">Add new item</string>
    <string name="hint_new_item_label">new item label</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="login">Login</string>
    <string name="to_register">Don\'t have an account? Register!</string>
    <string name="register_button">Register</string>
    <string name="to_login">Already have an account? Log in!</string>
    <string name="hint_register_username">Enter username</string>
    <string name="hint_register_password">Enter password</string>
    <string name="hint_registe_confirm_password">Confirm password</string>
    <string name="start_info">You don\'t have any lists yet.</string>
    <string name="menu_preferences">Preferences</string>
    <string name="settings_password_text">Change password</string>
    <string name="settings_username_text">Change username</string>
    <string name="settings_logout_text">Log out</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="confirm_new_password">Confirm new password</string>
    <string name="change_password">Change password</string>
</resources>